# empathetic

./: .env.example  .gitignore  API.md  LICENSE  README.md  debug_test.py  pyproject.toml  simple_test.py  test_anthropic_model.py  test_backward_compatibility.py  test_comparison.py
config/: default.yaml
data/tests/: alignment_tests.json  bias_tests.json  empathy_tests.json  fairness_tests.json  safety_tests.json
docs/: community-validation.md  context-aware-evaluation.md  model-capabilities.md
empathetic/: __init__.py  cli.py  config.py
empathetic/api/: README.md  __init__.py  config.py  main.py
empathetic/api/models/: __init__.py  testing.py  validation.py
empathetic/api/routers/: __init__.py  health.py  reports.py  testing.py  validation.py
empathetic/api/services/: __init__.py  auth.py  reports.py  testing.py  validation.py
empathetic/core/: test_base.py  tester.py
empathetic/evaluation/: __init__.py  bias_evaluator.py  safety_evaluator.py  unified_evaluator.py
empathetic/metrics/: aggregators.py  calculators.py  dimensions.py  evaluation_metrics.py
empathetic/models/: capabilities.py  intent_classifier.py
empathetic/providers/: anthropic.py  base.py  factory.py  openai.py
empathetic/tests/: alignment.py  bias.py  empathy.py  enhanced_alignment.py  enhanced_bias.py  enhanced_safety.py  fairness.py  safety.py  universal_contextual.py
empathetic/tests/patterns/: __init__.py  adversarial.py
empathetic/tests/suites/: __init__.py  employment.py  healthcare.py
empathetic/utils/: config.py  config_validator.py  context_analyzer.py  helpers.py  logging.py  nlp_analyzer.py  outputs.py  performance.py  semantic_analyzer.py  validators.py
examples/: advanced_usage.py  basic_usage.py  context_aware_example.py
outputs/: .gitkeep  README.md
tests/: test_basic.py  test_cli.py  test_providers.py  test_test_suites.py
